<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_bkg"
    tools:context=".BackupActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/backup"
                android:textColor="@color/frost_end"
                android:textSize="24sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/fileName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:autofillHints="File Name"
                android:background="@drawable/auth_border"
                android:gravity="start|center_vertical"
                android:hint="@string/enter_file_name"
                android:inputType="text"
                android:maxLines="1"
                android:padding="16dp"/>

            <EditText
                android:id="@+id/sourceLang"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/auth_border"
                android:gravity="start|center_vertical"
                android:hint="@string/source_language"
                android:padding="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/gray"
                android:inputType="text"
                android:importantForAutofill="no" />
            <EditText
                android:id="@+id/targetLang"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/auth_border"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="@string/target_language"
                android:gravity="start|center_vertical"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="text"
                android:importantForAutofill="no" />
            <EditText
                android:id="@+id/sourceText"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/auth_border"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:hint="@string/source_text"
                android:gravity="start|center_vertical"
                android:textColor="@color/colorPrimaryDark"
                android:inputType="text"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/targetText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/auth_border"
                android:gravity="start|center_vertical"
                android:hint="@string/target_text"
                android:padding="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/gray"
                android:inputType="text"
                android:importantForAutofill="no" />
            <Button
                android:id="@+id/btnBackup"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/save"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                app:cornerRadius = "20dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>