<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/auth_bkg"
    tools:context=".SignUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Sign_up"
                android:textSize="28sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_name"
                android:background="@drawable/auth_border"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:hint="@string/Name"
                android:textColor="@color/black"
                android:inputType="textPersonName" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_email"
                android:background="@drawable/auth_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:hint="@string/Email"
                android:textColor="@color/black"
                android:inputType="textEmailAddress" />
            <EditText
                android:id="@+id/signup_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/auth_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/Username"
                android:textColor="@color/black"
                android:inputType= "text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_password"
                android:background="@drawable/auth_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/ic_baseline_eye_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/signup_confirm_password"
                android:background="@drawable/auth_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/retype_password"
                android:inputType="textPassword"
                android:drawableEnd="@drawable/ic_baseline_eye_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/Sign_up"
                android:id="@+id/signup_button"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/colorPrimary"
                app:cornerRadius = "20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/redirectText"
                android:text="@string/redirect_login"
                android:layout_gravity="center"
                android:padding="6dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>