<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/auth_bkg">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_profile"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editName"
                android:background="@drawable/auth_border"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/name"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawableTint="@color/colorPrimary"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:inputType="text"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editUsername"
                android:background="@drawable/auth_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/username"
                android:drawableStart="@drawable/baseline_user_24"
                android:drawableTint="@color/colorPrimary"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:inputType="text" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editPassword"
                android:background="@drawable/auth_border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:drawableStart="@drawable/baseline_password_24"
                android:drawableTint="@color/colorPrimary"
                android:drawablePadding="8dp"
                android:textColor="@color/black"
                android:inputType="textPassword" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/save"
                android:id="@+id/btnSave"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/colorPrimary"
                app:cornerRadius = "12dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>