<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewNoteActivity">
    <LinearLayout
        android:id="@+id/verticalLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/fileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/file_name"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="24sp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:inputType="text" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/checkIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_check_24"
                android:tint="@android:color/black"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/langLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/sourceLang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/auth_border"
                android:padding="16dp"
                android:hint="@string/source_language"
                android:gravity="center"
                android:textColor="@android:color/black" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:padding="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_arrow"
                android:tint="@android:color/black"/>

            <EditText
                android:id="@+id/targetLang"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/auth_border"
                android:padding="16dp"
                android:hint="@string/target_language"
                android:gravity="center"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <EditText
            android:id="@+id/sourceText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/auth_border"
            android:layout_marginTop="20dp"
            android:padding="16dp"
            android:hint="@string/source_text"
            android:gravity="start"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/targetText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/auth_border"
            android:layout_marginTop="20dp"
            android:padding="16dp"
            android:hint="@string/target_text"
            android:gravity="start"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <!--    Bottom Navigation-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bottom_background"
        android:elevation="2dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_menu" />
</RelativeLayout>